<resources>
    <string name="app_name">Task Planner App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="initial_page">Initial Page</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="action_sign_in">Iniciar Sesión</string>
    <string name="action_sign_in_short">Contraseña</string>
    <string name="prompt_password">Contraseña</string>
    <string name="prompt_email">Usuario</string>
    <string name="field_cannot_be_empty">El campo no puede ser vacío</string>
    <string name="auth_error">Error de autenticación</string>
    <string name="taskname">Task Name</string>
    <string name="taskDescription">Task Description</string>
    <string name="taskStatus">Task Status</string>
    <string name="taskAssignedTo">Task Assigned To</string>
    <string name="taskDueDate">Task Due Date</string>
</resources>